<resources>
    <string name="app_name">Ask Question Poll</string>
    <string name="login_splash_text">Ask Your Friends</string>
    <string name="email_text">email</string>
    <string name="password_text">password</string>
    <string name="forgot_password_text">forgot password ?</string>
    <string name="login_text">login</string>
    <string name="signup_text">signup</string>
    <string name="name_text">name</string>
    <string name="confirm_password_text">confirm password</string>
    <string name="country_text">country</string>
    <string name="gender_text">gender</string>
    <string name="male_text">male</string>
    <string name="female_text">female</string>
    <string name="send_otp_text">send otp</string>


    <string name="view_questions_text">View Questions</string>
    <string name="add_questions_text">Add Questions</string>
    <string name="setting_text">Settings</string>
    <string name="account_text">Account</string>
    <string name="resend_message_text">Didn\'t Receive Email</string>
    <string name="enter_your_otp_text">Enter Your Otp</string>
    <string name="reset_text">Reset</string>
    <string name="submit_text">Submit</string>
    <string name="click_here_text">Click here</string>
    <string name="text_0">0</string>
    <string name="choose_image_source_text">Choose Image Source</string>
    <string name="skip_text">Skip</string>
    <string name="sample_text">Sample Text</string>
    <string name="sample_option1_text">Enter option 1\nMaximum 20\nCharacters</string>
    <string name="sample_option2_text">Enter option 2\nMaximum 20\nCharacters</string>
    <string name="question_text">Question</string>
    <string name="description_text">Description</string>
    <string name="option_text">Option</string>
    <string name="text_text">Text</string>
    <string name="image_text">Image</string>
    <string name="preferences_text">Preferences</string>
    <string name="location_message_text">Note: Your question will be visible at only selected location</string>
    <string name="gender_message_text">Note: Your question will be visible at only selected gender</string>
    <string name="preview_text">Preview</string>
    <string name="category_text">Category</string>
    <string name="oops_text">Oops</string>
    <string name="no_data_text">No Data</string>
    <string name="edittext_0_200_text">0/200</string>
    <string name="get_more_coins_text">get more coins</string>
    <string name="edit_profile_text">edit profile</string>
    <string name="change_password_text">change password</string>
    <string name="others_text">others</string>
    <string name="available_coins_text">available coins</string>
    <string name="purchase_coins_text">Purchase coins</string>
    <string name="coins_150_text">150 coins</string>
    <string name="coins_50_text">50 coins</string>
    <string name="coins_10_text">10 coins</string>
    <string name="click_below_icon_to_purchase_text">click below icon to purchase</string>
    <string name="save_text">save</string>
    <string name="full_name_text">full name</string>
    <string name="old_password_text">old password</string>
    <string name="confirm_new_password_text">confirm new password</string>
    <string name="new_password_text">new password</string>
    <string name="rating_text">rating</string>
    <string name="privacy_policy_text"><![CDATA[privacy & policy]]></string>
    <string name="terms_condition_text"><![CDATA[terms & condition]]></string>
    <string name="view_question_text">view question</string>
    <string name="view_analysis_text">view analysis</string>
    <string name="cancel_text">cancel</string>
    <string name="rating_message_text">How was your experience with\nus?</string>
    <string name="not_now_text">not now</string>
    <string name="select_country_text">Select Country</string>
    <string name="all_text">all</string>
    <string name="none_text">none</string>
    <string name="option_1_text">option 1</string>
    <string name="option_2_text">option 2</string>
</resources>