<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/parent_my_question_analysis_activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".ui.activity.AnalysisMyQuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_16"
            android:orientation="horizontal"
            android:weightSum="9">

            <RadioButton
                android:id="@+id/country_my_question_analysis_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:buttonTint="@color/white"
                android:text="@string/country_text"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/gender_my_question_analysis_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:buttonTint="@color/white"
                android:text="@string/gender_text"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/none_my_question_analysis_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:buttonTint="@color/white"
                android:text="@string/none_text"
                android:textColor="@color/white" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ui_horizontal_line_white"
            android:padding="@dimen/dp16" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp8"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="9">

                <TextView
                    android:id="@+id/selection_text_my_question_analysis_activity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:buttonTint="@color/white"
                    android:gravity="center"
                    android:textSize="@dimen/text_20"
                    android:text="@string/country_text"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:buttonTint="@color/white"
                    android:gravity="center"
                    android:textSize="@dimen/text_20"
                    android:text="@string/option_1_text"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="@dimen/text_20"
                    android:buttonTint="@color/white"
                    android:gravity="center"
                    android:text="@string/option_2_text"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_my_question_analysis_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dp16" />
    </LinearLayout>
</ScrollView>