<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dialog.CountryPickupDialog">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:layout_marginBottom="@dimen/dp16"
        android:background="@drawable/ui_round_solid_white"
        android:orientation="vertical"
        android:padding="@dimen/dp8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_country_text"
            android:textColor="@color/pure_blue" />

        <EditText
            android:id="@+id/search_country_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_round_search"
            android:lines="1" />


        <CheckBox
            android:id="@+id/all_selection_country_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/pure_blue"
            android:text="@string/all_text"
            android:textColor="@color/pure_blue" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp300">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_country_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginVertical="@dimen/dp4"
            android:gravity="end">

            <TextView
                android:id="@+id/cancel_country_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp8"
                android:text="@string/cancel_text"
                android:textColor="@color/pure_blue" />

            <TextView
                android:id="@+id/select_country_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp8"
                android:text="@string/select_country_text"
                android:textColor="@color/pure_blue" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>